use more beautiful blur

--- a/picom.conf
+++ b/picom.conf
@@ -131,9 +131,8 @@ blur-background-exclude = [
 ];
 
 blur: {
-method = "gaussian";
-size = 30;
-deviation = 30;
+method = "dual_kawase";
+strength = 7;
 };
 
 #################################
