--- a/i3/config
+++ b/i3/config
@@ -221,13 +221,14 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
-# Set shut down, restart and locking features
 bindsym $mod+i mode "$mode_workspace_selector"
 set $mode_workspace_selector (1) WebDev
 mode "$mode_workspace_selector" {
     bindsym 1 exec --no-startup-id "i3-msg 'append_layout /home/luc/.i3/web-dev.json'", \
         exec --no-startup-id firefox, \
         exec --no-startup-id firefox, \
+        exec --no-startup-id alacritty, \
+        exec --no-startup-id discord, \
         exec --no-startup-id code, \
         mode "default"
 
