--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id nitrogen --restore; sleep 1
 exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
-exec --no-startup-id picom -b
+exec --no-startup-id picom -b --backend glx
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 exec --no-startup-id numlockx on
@@ -32,7 +32,7 @@ bindsym $mod+n border normal
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font xft:URWGothic-Book 11
+font pango:0xProto Nerd Font Mono 11
 
 # Use Mouse+$mod to drag floating windows
 floating_modifier $mod
@@ -70,7 +70,7 @@ bindsym $mod+F2 exec firefox
 bindsym $mod+F3 exec pcmanfm
 bindsym $mod+Ctrl+m exec pavucontrol
 bindsym $mod+t exec --no-startup-id pkill picom
-bindsym $mod+Ctrl+t exec --no-startup-id picom -b
+bindsym $mod+Ctrl+t exec --no-startup-id picom -b --backend glx
 bindsym $mod+Shift+d --release exec "killall dunst; exec notify-send 'restart dunst'"
 bindsym--release Print exec --no-startup-id i3-scrot -sc
 bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
@@ -329,7 +329,7 @@ bar {
 
 	bindsym button4 nop
 	bindsym button5 nop
-    font pango:FiraMono Nerd Font 11
+    font pango:0xProto Nerd Font Mono 11
 	strip_workspace_numbers yes
     tray_padding 3px
 
