--- a/oh-my-posh.yaml
+++ b/oh-my-posh.yaml
@@ -6,6 +6,12 @@ blocks:
   - type: prompt
     alignment: left
     segments:
+      - type: time
+        style: powerline
+        background: "#193549"
+        foreground: "#47a6e9"
+        properties:
+          time_format: Mon 15:04:05
       - type: path
         style: powerline
         powerline_symbol: ""
@@ -20,15 +26,15 @@ blocks:
         foreground: "#193549"
         background: "#53dc4e"
         background_templates:
+          - "{{ if and (.Staging.Changed) (not .Working.Changed) }}#62ffa8{{ end }}"
           - "{{ if (.Working.Changed) }}#ffbb34{{ end }}"
-          - "{{ if and (gt .Ahead 0) (gt .Behind 0) }}#ffbb34{{ end }}"
-          - "{{ if gt .Ahead 0 }}#B388FF{{ end }}"
-          - "{{ if gt .Behind 0 }}#B388FB{{ end }}"
+          - "{{ if or (gt .Ahead 0) (gt .Behind 0) }}#B388FF{{ end }}"
         template: " {{ .HEAD }} \
+          {{ if gt .Ahead 0 }}↑{{ .Ahead }} {{ end }}\
+          {{ if gt .Behind 0 }}↓{{ .Behind }} {{ end }}\
           {{ if .Staging.Changed }} {{ .Staging.String }} {{ end }}\
           {{ if .Working.Changed }}󱅄 {{ .Working.String }} {{ end }}\
-          {{ if gt .Ahead 0 }}↑{{ .Ahead }}{{ end }}\
-          {{ if gt .Behind 0 }}↓{{ .Behind }}{{ end }}"
+          "
         properties:
           fetch_status: true
           source: cli
