--- a/waybar/networking.jsonc
+++ b/waybar/networking.jsonc
@@ -1,10 +1,10 @@
 {
   "network": {
-    "format": "{ifname}",
+    "format": "  {bandwidthDownBytes}  {bandwidthUpBytes}",
     "format-wifi": " {signalStrength}%  {bandwidthDownBytes}  {bandwidthUpBytes}",
-    "format-ethernet": "  {bandwidthDownBytes}  {bandwidthUpBytes} ",
-    "format-disconnected": "󰲛 ",
-    "tooltip-format": " {ifname} via {gwaddri}",
+    "format-ethernet": "  {bandwidthDownBytes}  {bandwidthUpBytes}",
+    "format-disconnected": "󰲛",
+    "tooltip-format": " {ifname} via {gwaddr}",
     "tooltip-format-wifi": " {essid} ({signalStrength}%)",
     "tooltip-format-ethernet": " {ifname} ({ipaddr}/{cidr})",
     "tooltip-format-disconnected": "Disconnected",
