--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -26,7 +26,7 @@ i3 = "~/.i3"
 
 [niri.files]
 "niri/config.kdl" = "~/.config/niri/config.kdl"
-"swaylock/config" = "~/.config/swaylock/config"
+"hypr/hyprlock.conf" = "~/.config/hypr/hyprlock.conf"
 "mako/config" = "~/.config/mako/config"
 "waybar/" = "~/.config/waybar/"
 "systemd/user/swaybg.service" = "~/.config/systemd/user/swaybg.service"
