--- a/waybar/media.jsonc
+++ b/waybar/media.jsonc
@@ -5,22 +5,21 @@
     "format-bluetooth-muted": " {icon} ",
     "format-muted": " ",
     "format-icons": {
-      "headphone": "",
-      "hands-free": "",
-      "headset": "",
-      "phone": "",
-      "portable": "",
-      "car": "",
+      "alsa_output.pci-0000_0a_00.4.analog-stereo": ["", "", ""],
+      "alsa_output.usb-C-Media_Electronics_Inc._USB_Audio_Device-00.analog-stereo": "",
+      "bluez_output.0C_AE_BD_06_99_5A.1": "󰓃 Edifiers",
+      "alsa_output.pci-0000_c1_00": " Internals",
       "default": ["", "", ""]
     },
     "scroll-step": 1,
-    "on-click-right": "pavucontrol",
-    "on-click": "amixer set Master toggle"
+    "on-click-right": "pavucontro",
+    "on-click": "~/.dotfiles/scripts/next-sink.py",
+    "on-click-middle": "amixer set Master toggle"
   },
   "pulseaudio#mic": {
     "format": "{icon} {format_source}",
     "format-source": " {volume}%",
-    "format-source-muted": " ",
+    "format-source-muted": "",
     "on-scroll-up": "amixer set Capture 5%+",
     "on-scroll-down": "amixer set Capture 5%-",
     "on-click-right": "pavucontrol",
