use hypridle instead of swayidle

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -27,10 +27,10 @@ i3 = "~/.i3"
 [niri.files]
 "niri/config.kdl" = "~/.config/niri/config.kdl"
 "hypr/hyprlock.conf" = "~/.config/hypr/hyprlock.conf"
+"hypr/hypridle.conf" = "~/.config/hypr/hypridle.conf"
 "mako/config" = "~/.config/mako/config"
 "waybar/" = "~/.config/waybar/"
 "systemd/user/swaybg.service" = "~/.config/systemd/user/swaybg.service"
-"systemd/user/swayidle.service" = "~/.config/systemd/user/swayidle.service"
 "systemd/user/gnome-polkit.service" = "~/.config/systemd/user/gnome-polkit.service"
 
 [zsh.files]
