migrate to dank material shell

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,5 +1,5 @@
 general {
-    lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
+    lock_cmd = dms ipc call lock lock
     before_sleep_cmd = loginctl lock-session    # lock before suspend.
 }
 
@@ -15,7 +15,7 @@ listener {
 }
 
 listener {
-    timeout = 330                                                     # 5.5min
+    timeout = 330                                 # 5.5min
     on-timeout = niri msg action power-off-monitors                            # screen off when timeout has passed
     on-resume = brightnessctl -r          # screen on when activity is detected after timeout has fired.
 }
