--- a/DankMaterialShell/settings.json
+++ b/DankMaterialShell/settings.json
@@ -1,8 +1,9 @@
 {
   "currentThemeName": "orange",
   "customThemeFile": "",
-  "topBarTransparency": 0.75,
-  "topBarWidgetTransparency": 0.85,
+  "matugenScheme": "scheme-tonal-spot",
+  "dankBarTransparency": 0.75,
+  "dankBarWidgetTransparency": 0.85,
   "popupTransparency": 0.92,
   "dockTransparency": 1,
   "use24HourClock": true,
@@ -32,6 +33,48 @@
   "controlCenterShowNetworkIcon": true,
   "controlCenterShowBluetoothIcon": true,
   "controlCenterShowAudioIcon": true,
+  "controlCenterWidgets": [
+    {
+      "id": "volumeSlider",
+      "enabled": true,
+      "width": 50
+    },
+    {
+      "id": "brightnessSlider",
+      "enabled": true,
+      "width": 50
+    },
+    {
+      "id": "wifi",
+      "enabled": true,
+      "width": 50
+    },
+    {
+      "id": "bluetooth",
+      "enabled": true,
+      "width": 50
+    },
+    {
+      "id": "audioOutput",
+      "enabled": true,
+      "width": 50
+    },
+    {
+      "id": "audioInput",
+      "enabled": true,
+      "width": 50
+    },
+    {
+      "id": "nightMode",
+      "enabled": true,
+      "width": 50
+    },
+    {
+      "id": "darkMode",
+      "enabled": true,
+      "width": 50
+    }
+  ],
   "showWorkspaceIndex": true,
   "showWorkspacePadding": false,
   "showWorkspaceApps": true,
@@ -46,7 +89,7 @@
   "clockDateFormat": "",
   "lockDateFormat": "",
   "mediaSize": 1,
-  "topBarLeftWidgets": [
+  "dankBarLeftWidgets": [
     {
       "id": "launcherButton",
       "enabled": true
@@ -60,7 +103,11 @@
       "enabled": true
     }
   ],
-  "topBarCenterWidgets": [
+  "dankBarCenterWidgets": [
+    {
+      "id": "weather",
+      "enabled": true
+    },
     {
       "id": "clock",
       "enabled": true
@@ -68,13 +115,9 @@
     {
       "id": "music",
       "enabled": true
-    },
-    {
-      "id": "weather",
-      "enabled": true
     }
   ],
-  "topBarRightWidgets": [
+  "dankBarRightWidgets": [
     {
       "id": "cpuUsage",
       "enabled": true
@@ -120,7 +163,6 @@
   "osLogoColorOverride": "",
   "osLogoBrightness": 0.5,
   "osLogoContrast": 1,
-  "wallpaperDynamicTheming": true,
   "fontFamily": "Inter Variable",
   "monoFontFamily": "Fira Code",
   "fontWeight": 400,
@@ -128,22 +170,34 @@
   "notepadUseMonospace": true,
   "notepadFontFamily": "",
   "notepadFontSize": 14,
+  "notepadShowLineNumbers": false,
+  "notepadTransparencyOverride": -1,
+  "notepadLastCustomTransparency": 0.95,
   "gtkThemingEnabled": false,
   "qtThemingEnabled": false,
   "showDock": false,
   "dockAutoHide": false,
+  "dockGroupByApp": false,
+  "dockOpenOnOverview": false,
+  "dockPosition": 1,
+  "dockSpacing": 4,
+  "dockBottomGap": 0,
   "cornerRadius": 12,
   "notificationOverlayEnabled": false,
-  "topBarAutoHide": false,
-  "topBarOpenOnOverview": false,
-  "topBarVisible": true,
-  "topBarSpacing": 4,
-  "topBarBottomGap": 0,
-  "topBarInnerPadding": 8,
-  "topBarSquareCorners": false,
-  "topBarNoBackground": false,
+  "dankBarAutoHide": false,
+  "dankBarOpenOnOverview": false,
+  "dankBarVisible": true,
+  "dankBarSpacing": 4,
+  "dankBarBottomGap": 0,
+  "dankBarInnerPadding": 8,
+  "dankBarSquareCorners": false,
+  "dankBarNoBackground": false,
+  "dankBarGothCornersEnabled": false,
+  "dankBarAtBottom": false,
   "lockScreenShowPowerActions": true,
   "hideBrightnessSlider": false,
+  "widgetBackgroundColor": "sch",
+  "surfaceBase": "s",
   "notificationTimeoutLow": 5000,
   "notificationTimeoutNormal": 5000,
   "notificationTimeoutCritical": 0,
