--- a/DankMaterialShell/settings.json
+++ b/DankMaterialShell/settings.json
@@ -1,12 +1,15 @@
 {
-  "currentThemeName": "orange",
+  "currentThemeName": "dynamic",
   "customThemeFile": "",
-  "matugenScheme": "scheme-tonal-spot",
+  "matugenScheme": "scheme-content",
+  "runUserMatugenTemplates": true,
+  "matugenTargetMonitor": "",
   "dankBarTransparency": 0.75,
   "dankBarWidgetTransparency": 0.85,
   "popupTransparency": 0.92,
   "dockTransparency": 1,
   "use24HourClock": true,
+  "showSeconds": true,
   "useFahrenheit": false,
   "nightModeEnabled": false,
   "weatherLocation": "40.7128, -74.0060",
@@ -76,16 +79,20 @@
     }
   ],
   "showWorkspaceIndex": true,
+  "workspaceScrolling": false,
   "showWorkspacePadding": false,
   "showWorkspaceApps": true,
   "maxWorkspaceIcons": 3,
   "workspacesPerMonitor": true,
+  "dwlShowAllTags": false,
   "workspaceNameIcons": {},
   "waveProgressEnabled": true,
   "clockCompactMode": false,
   "focusedWindowCompactMode": false,
   "runningAppsCompactMode": true,
+  "keyboardLayoutNameCompactMode": true,
   "runningAppsCurrentWorkspace": false,
+  "runningAppsGroupByApp": false,
   "clockDateFormat": "",
   "lockDateFormat": "",
   "mediaSize": 1,
@@ -105,7 +112,7 @@
   ],
   "dankBarCenterWidgets": [
     {
-      "id": "weather",
+      "id": "music",
       "enabled": true
     },
     {
@@ -113,7 +120,7 @@
       "enabled": true
     },
     {
-      "id": "music",
+      "id": "weather",
       "enabled": true
     }
   ],
@@ -125,6 +132,11 @@
     {
       "id": "memUsage",
       "enabled": true
+    },
+    {
+      "id": "diskUsage",
+      "enabled": true,
+      "mountPath": "/"
     },
     {
       "id": "network_speed_monitor",
@@ -153,28 +165,44 @@
     {
       "id": "notificationButton",
       "enabled": true
+    },
+    {
+      "id": "keyboard_layout_name",
+      "enabled": true
     }
   ],
   "appLauncherViewMode": "list",
   "spotlightModalViewMode": "list",
-  "networkPreference": "auto",
+  "sortAppsAlphabetically": false,
+  "networkPreference": "wifi",
+  "vpnLastConnected": "bc5e317d-b3db-4b78-9a37-340936688b11",
   "iconTheme": "System Default",
-  "useOSLogo": false,
-  "osLogoColorOverride": "",
-  "osLogoBrightness": 0.5,
-  "osLogoContrast": 1,
+  "launcherLogoMode": "apps",
+  "launcherLogoCustomPath": "",
+  "launcherLogoColorOverride": "",
+  "launcherLogoColorInvertOnMode": false,
+  "launcherLogoBrightness": 0.5,
+  "launcherLogoContrast": 1,
+  "launcherLogoSizeOffset": 0,
   "fontFamily": "Inter Variable",
   "monoFontFamily": "Fira Code",
   "fontWeight": 400,
   "fontScale": 1,
+  "dankBarFontScale": 1,
   "notepadUseMonospace": true,
   "notepadFontFamily": "",
   "notepadFontSize": 14,
   "notepadShowLineNumbers": false,
   "notepadTransparencyOverride": -1,
   "notepadLastCustomTransparency": 0.95,
+  "soundsEnabled": true,
+  "useSystemSoundTheme": false,
+  "soundNewNotification": true,
+  "soundVolumeChanged": true,
+  "soundPluggedIn": true,
   "gtkThemingEnabled": false,
   "qtThemingEnabled": false,
+  "syncModeWithPortal": true,
   "showDock": false,
   "dockAutoHide": false,
   "dockGroupByApp": false,
@@ -182,10 +210,12 @@
   "dockPosition": 1,
   "dockSpacing": 4,
   "dockBottomGap": 0,
+  "dockIconSize": 40,
+  "dockIndicatorStyle": "circle",
   "cornerRadius": 12,
   "notificationOverlayEnabled": false,
   "dankBarAutoHide": false,
-  "dankBarOpenOnOverview": false,
+  "dankBarOpenOnOverview": true,
   "dankBarVisible": true,
   "dankBarSpacing": 4,
   "dankBarBottomGap": 0,
@@ -193,13 +223,52 @@
   "dankBarSquareCorners": false,
   "dankBarNoBackground": false,
   "dankBarGothCornersEnabled": false,
-  "dankBarAtBottom": false,
+  "dankBarBorderEnabled": false,
+  "dankBarBorderColor": "surfaceText",
+  "dankBarBorderOpacity": 1,
+  "dankBarBorderThickness": 1,
+  "popupGapsAuto": true,
+  "popupGapsManual": 4,
+  "dankBarPosition": 0,
   "lockScreenShowPowerActions": true,
+  "enableFprint": true,
+  "maxFprintTries": 3,
   "hideBrightnessSlider": false,
   "widgetBackgroundColor": "sch",
   "surfaceBase": "s",
+  "wallpaperFillMode": "Fill",
+  "blurredWallpaperLayer": false,
+  "blurWallpaperOnOverview": false,
   "notificationTimeoutLow": 5000,
   "notificationTimeoutNormal": 5000,
   "notificationTimeoutCritical": 0,
-  "screenPreferences": {}
+  "notificationPopupPosition": 3,
+  "osdAlwaysShowValue": true,
+  "powerActionConfirm": true,
+  "customPowerActionLock": "",
+  "customPowerActionLogout": "",
+  "customPowerActionSuspend": "",
+  "customPowerActionHibernate": "",
+  "customPowerActionReboot": "",
+  "customPowerActionPowerOff": "",
+  "updaterUseCustomCommand": false,
+  "updaterCustomCommand": "",
+  "updaterTerminalAdditionalParams": "",
+  "screenPreferences": {},
+  "showOnLastDisplay": {},
+  "animationSpeed": 2,
+  "customAnimationDuration": 500,
+  "acMonitorTimeout": 0,
+  "acLockTimeout": 0,
+  "acSuspendTimeout": 0,
+  "acHibernateTimeout": 0,
+  "batteryMonitorTimeout": 0,
+  "batteryLockTimeout": 0,
+  "batterySuspendTimeout": 0,
+  "batteryHibernateTimeout": 0,
+  "lockBeforeSuspend": false,
+  "loginctlLockIntegration": false,
+  "launchPrefix": "",
+  "brightnessDevicePins": {},
+  "configVersion": 1
 }
