--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -1,5 +1,5 @@
 [default]
-depends = ["git", "niri", "wezterm", "logseq", "syncthing"]
+depends = ["git", "niri", "fish", "alacritty", "logseq"]
 
 [wezterm.files]
 "wezterm.lua" = { target = "~/.wezterm.lua", type = "symbolic" }
@@ -21,16 +21,13 @@ i3 = "~/.i3"
 "niri/config.kdl" = "~/.config/niri/config.kdl"
 "hypr/hypridle.conf" = "~/.config/hypr/hypridle.conf"
 "systemd/user/gnome-polkit.service" = "~/.config/systemd/user/gnome-polkit.service"
-"DankMaterialShell/settings.json" = "~/.config/DankMaterialShell/settings.json"
-
-[syncthing.files]
-"systemd/user/syncthingtray.service" = "~/.config/systemd/user/syncthingtray.service"
 
 [zsh.files]
 "zsh/zshrc" = { target = "~/.zshrc", type = "template" }
 
 [fish.files]
 "fish/config.fish" = "~/.config/fish/config.fish"
+"fish/fish_plugins" = "~/.config/fish/fish_plugins"
 
 [alacritty.files]
 "alacritty.toml" = "~/.config/alacritty/alacritty.toml"
